--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 	<script src="js/IndexedTrianglesGeometry.js"></script>
 	<script src="js/MultiMesh.js"></script>
 	<script src="js/PerspectiveCamera.js"></script>
+	<script src="js/Light.js"></script>
 
 
 	<script src="js/Texture2D.js"></script>
@@ -58,6 +59,7 @@
 	<script src="js/OrthoCamera.js"></script>
 	<script src="js/Mesh.js"></script>
 	<script src="js/GameObject2D.js"></script>
+	<script src="js/ClippedQuadric.js"></script>
 	
 	<script src="js/Background.js"></script>
 
